<resources>
    <string name="app_name">Launcher_x6s</string>
    <string name="home_gaode">GaoDe</string>
    <string name="home_document_management">Document management</string>
    <string name="home_setting">Setting</string>
    <string name="home_app_update">App Update</string>
    <string name="home_current_position">Current position</string>
    <string name="notifyTitle">Tips</string>
    <string name="notifyMsg">Current applications lack the necessary permissions。\n\nPlease Click\"Setting\"-\"权限\"-Open the required permissions.</string>
    <string name="setting">Setting</string>
    <string name="cancel">cancel</string>
    <string name="home_first_music">Music</string>
    <string name="home_first_radio">Himalayan</string>
    <string name="home_first_fm">FM</string>
    <string name="home_first_bluetooth">Vehicle Bluetooth</string>
    <string name="home_first_personal_center">Personal center</string>
    <string name="home_first_navigation">Autonavi Navigation</string>
    <string name="home_first_playback">Drive Recorder</string>
    <string name="home_first_setting">Setting</string>
    <string name="home_first_electronic_dog">Drive Recorder</string>
    <string name="home_first_sos">SOS</string>
    <string name="home_first_dvr">00:00:00</string>
    <string name="home_first_file_management">File Management</string>
    <string name="home_first_app_management">App Management</string>
    <!--<string name="home_second_music">KuWoMusic</string>-->
    <string name="home_second_music">""</string>
    <!--<string name="home_second_radio">Himalayan</string>-->
    <string name="home_second_radio">""</string>
    <!--<string name="home_second_fm">FM</string>-->
    <string name="home_second_fm">""</string>
    <string name="home_second_bluetooth">Not connected</string>
    <string name="home_second_personal_center">Personal center</string>
    <!--<string name="home_second_navigation">Autonavi Navigation</string>-->
    <string name="home_second_navigation">""</string>
    <string name="home_second_playback">Video playback</string>
    <string name="home_second_setting">Setting</string>
    <string name="home_second_electronic_dog">E dog</string>
    <string name="home_second_sos">SOS</string>
    <string name="home_second_dvr">Drive Recorder</string>
    <string name="home_second_file_management">File Management</string>
    <string name="home_second_app_management">App Management</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_title_delete">Delete Application</string>
    <string name="dialog_message_delete">Make sure you want to delete </string>
    <string name="txz_wake_up_name">你好小海</string>
    <string name="app_not_install">No available transfer procedures found</string>
</resources>
