<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_box"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/item_bg">

    <ImageView
        android:id="@+id/iv_app_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/tv_app_name_1"
        style="@style/homeTextViewStyle"
        android:layout_marginTop="8dp"
        android:text="@string/home_gaode"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/iv_app_1"
        app:layout_constraintRight_toRightOf="@id/iv_app_1"
        app:layout_constraintTop_toBottomOf="@id/iv_app_1" />

    <ImageView
        android:id="@+id/iv_app_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/tv_app_name_2"
        style="@style/homeTextViewStyle"
        android:layout_marginTop="8dp"
        android:text="@string/home_document_management"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/iv_app_2"
        app:layout_constraintRight_toRightOf="@id/iv_app_2"
        app:layout_constraintTop_toBottomOf="@id/iv_app_2" />

    <ImageView
        android:id="@+id/iv_app_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/iv_app_1"
        app:layout_constraintRight_toRightOf="@id/iv_app_1"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_1"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/tv_app_name_3"
        style="@style/homeTextViewStyle"
        android:layout_marginTop="8dp"
        android:text="@string/home_setting"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/iv_app_3"
        app:layout_constraintRight_toRightOf="@id/iv_app_3"
        app:layout_constraintTop_toBottomOf="@id/iv_app_3" />

    <ImageView
        android:id="@+id/iv_app_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/iv_app_2"
        app:layout_constraintRight_toRightOf="@id/iv_app_2"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_2"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/tv_app_name_4"
        style="@style/homeTextViewStyle"
        android:layout_marginTop="8dp"
        android:text="@string/home_app_update"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/iv_app_4"
        app:layout_constraintRight_toRightOf="@id/iv_app_4"
        app:layout_constraintTop_toBottomOf="@id/iv_app_4" />

    <ImageView
        android:id="@+id/iv_box_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@id/cl_box"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/cl_box"
        app:layout_constraintRight_toRightOf="@id/cl_box"
        app:layout_constraintWidth_percent="0.18" />
</android.support.constraint.ConstraintLayout>