<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#084ea4"
    android:divider="@drawable/transparent_dividing_line"
    android:orientation="horizontal"
    android:showDividers="middle">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_transparent_w_95">

        <ImageView
            android:id="@+id/iv_navigation_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cl_map"
            app:layout_constraintRight_toRightOf="@id/cl_map"
            app:layout_constraintTop_toTopOf="@id/cl_map" />

        <TextView
            android:id="@+id/tv_map_address"
            style="@style/homeTextViewStyle"
            android:text="南山大道"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_map"
            app:layout_constraintRight_toRightOf="@id/cl_map"
            app:layout_constraintTop_toBottomOf="@id/iv_navigation_icon" />

        <TextView
            android:id="@+id/tv_map_current"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="5dp"
            android:text="@string/home_current_position"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="@id/cl_map"
            app:layout_constraintRight_toRightOf="@id/cl_map"
            app:layout_constraintTop_toBottomOf="@id/tv_map_address" />

        <ImageView
            android:id="@+id/iv_navigation_switch"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="5dp"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="@id/cl_map"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/cl_map"
            app:layout_constraintRight_toRightOf="@id/cl_map"
            app:layout_constraintWidth_percent="0.18" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_transparent_w_95">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_music_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cl_music"
            app:layout_constraintRight_toRightOf="@id/cl_music"
            app:layout_constraintTop_toTopOf="@id/cl_music">

            <ImageView
                app:layout_constraintDimensionRatio="1:1"
                android:id="@+id/iv_normal_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/tv_normal_title"
            style="@style/homeTextViewStyle"
            android:text="东风破"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_music"
            app:layout_constraintRight_toRightOf="@id/cl_music"
            app:layout_constraintTop_toBottomOf="@id/cl_music_item" />

        <TextView
            android:id="@+id/tv_normal_string"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="5dp"
            android:text="周杰伦"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="@id/cl_music"
            app:layout_constraintRight_toRightOf="@id/cl_music"
            app:layout_constraintTop_toBottomOf="@id/tv_normal_title" />

        <ImageView
            android:id="@+id/iv_normal_button"
            android:layout_width="10dp"
            android:layout_height="13dp"
            android:layout_marginBottom="5dp"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="@id/cl_music"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/cl_music"
            app:layout_constraintRight_toRightOf="@id/cl_music"
            app:layout_constraintWidth_percent="0.18" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_fm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_transparent_w_95">

        <ImageView
            android:id="@+id/iv_fm_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cl_fm"
            app:layout_constraintRight_toRightOf="@id/cl_fm"
            app:layout_constraintTop_toTopOf="@id/cl_fm" />

        <TextView
            android:id="@+id/tv_fm_name"
            style="@style/homeTextViewStyle"
            android:text="相声"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_fm"
            app:layout_constraintRight_toRightOf="@id/cl_fm"
            app:layout_constraintTop_toBottomOf="@id/iv_fm_icon" />

        <TextView
            android:id="@+id/tv_fm_station"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="5dp"
            android:text="郭德纲"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="@id/cl_fm"
            app:layout_constraintRight_toRightOf="@id/cl_fm"
            app:layout_constraintTop_toBottomOf="@id/tv_fm_name" />

        <ImageView
            android:id="@+id/iv_fm_play"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="@id/cl_fm"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/cl_fm"
            app:layout_constraintRight_toRightOf="@id/cl_fm"
            app:layout_constraintWidth_percent="0.18" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_transparent_w_95">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/iv_record"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cl_record"
            app:layout_constraintRight_toRightOf="@id/cl_record"
            app:layout_constraintTop_toTopOf="@id/cl_record">

            <SurfaceView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_record_time"
            style="@style/homeTextViewStyle"
            android:text="00:00:00"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_record"
            app:layout_constraintRight_toRightOf="@id/cl_record"
            app:layout_constraintTop_toBottomOf="@id/iv_record" />

        <TextView
            android:id="@+id/tv_record_status"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="5dp"
            android:text="行车记录仪关闭"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="@id/cl_record"
            app:layout_constraintRight_toRightOf="@id/cl_record"
            app:layout_constraintTop_toBottomOf="@id/tv_record_time" />

        <ImageView
            android:id="@+id/iv_record_switch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="@id/cl_record"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/cl_record"
            app:layout_constraintRight_toRightOf="@id/cl_record"
            app:layout_constraintWidth_percent="0.18" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_app_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_transparent_w_95">

        <ImageView
            android:id="@+id/iv_app_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="@id/cl_app_box"
            app:layout_constraintRight_toRightOf="@id/cl_app_box"
            app:layout_constraintTop_toTopOf="@id/cl_app_box"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_app_name_1"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="8dp"
            android:text="@string/home_gaode"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@id/iv_app_1"
            app:layout_constraintRight_toRightOf="@id/iv_app_1"
            app:layout_constraintTop_toBottomOf="@id/iv_app_1" />

        <ImageView
            android:id="@+id/iv_app_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="@id/cl_app_box"
            app:layout_constraintRight_toRightOf="@id/cl_app_box"
            app:layout_constraintTop_toTopOf="@id/cl_app_box"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_app_name_2"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="8dp"
            android:text="@string/home_document_management"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@id/iv_app_2"
            app:layout_constraintRight_toRightOf="@id/iv_app_2"
            app:layout_constraintTop_toBottomOf="@id/iv_app_2" />

        <ImageView
            android:id="@+id/iv_app_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/iv_app_1"
            app:layout_constraintRight_toRightOf="@id/iv_app_1"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name_1"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_app_name_3"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="8dp"
            android:text="@string/home_setting"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@id/iv_app_3"
            app:layout_constraintRight_toRightOf="@id/iv_app_3"
            app:layout_constraintTop_toBottomOf="@id/iv_app_3" />

        <ImageView
            android:id="@+id/iv_app_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/iv_app_2"
            app:layout_constraintRight_toRightOf="@id/iv_app_2"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name_2"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_app_name_4"
            style="@style/homeTextViewStyle"
            android:layout_marginTop="8dp"
            android:text="@string/home_app_update"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@id/iv_app_4"
            app:layout_constraintRight_toRightOf="@id/iv_app_4"
            app:layout_constraintTop_toBottomOf="@id/iv_app_4" />

        <ImageView
            android:id="@+id/iv_app_box_switch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="@id/cl_app_box"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@id/cl_app_box"
            app:layout_constraintRight_toRightOf="@id/cl_app_box"
            app:layout_constraintWidth_percent="0.18" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
